{
  "sourceLanguage" : "en",
  "strings" : {
    "%@, %@" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "%1$@, %2$@"
          }
        }
      },
      "shouldTranslate" : false
    },
    "common.button.cancel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mégsem"
          }
        }
      }
    },
    "common.button.confirm" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Confirm"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Megerősítés"
          }
        }
      }
    },
    "common.button.purchase" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Purchase"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vásárlás"
          }
        }
      }
    },
    "common.price_huf_format" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%@ HUF"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%@ Ft"
          }
        }
      }
    },
    "common.title.e_vignette" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "E-vignette"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "E-matrica"
          }
        }
      }
    },
    "confirmation.county_count" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Yearly county"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Éves vármegye"
          }
        }
      }
    },
    "confirmation.navigation_title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Confirmation"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Megerősítés"
          }
        }
      }
    },
    "confirmation.product" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Type of Vignette"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Matrica típusa"
          }
        }
      }
    },
    "confirmation.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Review order"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vásárlás megerősítése"
          }
        }
      }
    },
    "confirmation.total" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Total"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Összesen"
          }
        }
      }
    },
    "confirmation.transaction_fee" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Transaction fee"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rendszerhasználati díj"
          }
        }
      }
    },
    "confirmation.vehicle" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Licence plate"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rendszám"
          }
        }
      }
    },
    "county.button.next" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Next"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tovább"
          }
        }
      }
    },
    "county.section.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Yearly county vignettes"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Éves vármegyei matricák"
          }
        }
      }
    },
    "county.total_price.label" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Total amount"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fizetendő összeg"
          }
        }
      }
    },
    "county.warning.disconnected_selection" : {
      "comment" : "County name placeholder at %1$@",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%@ has no direct connection to currently selected counties."
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%@ nem kapcsolódik közvetlenül a jelenleg kiválasztott vármegye(k)hez."
          }
        }
      }
    },
    "home.section.county_vignettes" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Yearly county vignettes"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Éves vármegyei matricák"
          }
        }
      }
    },
    "home.section.national_vignettes" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "National vignettes"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Országos matricák"
          }
        }
      }
    },
    "home.title.highway" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Highway"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Autópálya"
          }
        }
      }
    },
    "national.vignette.day" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "D1 - daily (1 day)"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "D1 - napi (1 napos)"
          }
        }
      }
    },
    "national.vignette.month" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "D1 - monthly"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "D1 - havi"
          }
        }
      }
    },
    "national.vignette.week" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "D1 - weekly (10 days)"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "D1 - heti (10 napos)"
          }
        }
      }
    },
    "national.vignette.year" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "D1 - yearly"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "D1 - éves"
          }
        }
      }
    },
    "not_selected" : {
      "shouldTranslate" : false
    },
    "result.button.done" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rendben"
          }
        }
      }
    },
    "result.button.retry" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Try again"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Próbáld újra"
          }
        }
      }
    },
    "result.failure.message" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "The purchase could not be completed. Please try again."
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "A vásárlást nem sikerült befejezni. Kérlek próbáld újra."
          }
        }
      }
    },
    "result.failure.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Order failed"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "A rendelés sikertelen"
          }
        }
      }
    },
    "result.navigation_title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Result"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Eredmény"
          }
        }
      }
    },
    "result.success.message" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "You paid for\nthe vignettes\nsuccessfully!"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "A matricákat\nsikeresen\nkifizetted!"
          }
        }
      }
    },
    "result.success.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Order successful"
          }
        },
        "hu" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "A rendelés sikeres"
          }
        }
      }
    },
    "selected" : {
      "shouldTranslate" : false
    }
  },
  "version" : "1.0"
}